[Client] Fix back button overlap in interrogation view on small screens
A max-width property based on the viewport width less than a enough size has
been added on the interrogration title, in order to fix this issue.

--- a/truthseeker/static/css/game_ui_game.css
+++ b/truthseeker/static/css/game_ui_game.css
@@ -136,6 +136,7 @@ html {
     color: var(--red-color);
     font-size: 3em;
     font-weight: bold;
+    max-width: calc(100vw - 2em);
 }
 
 .suspects {
